Fix split dropdown spacing

--- a/scss/_button-group.scss
+++ b/scss/_button-group.scss
@@ -9,5 +9,18 @@
     &:not([class*='outline']) {
       margin-left: $border-width;
     }
+
+    // increased horizontal spacing on the dropdown button of large split dropdowns
+    &.btn-lg {
+      padding-right: 0.563rem;
+      padding-left: 0.563rem;
+    }
+  }
+
+  // collapse borders on split buttons with outline
+  .btn.dropdown-toggle-split[class*='outline'] {
+    margin-left: -$border-width;
   }
 }
+
+
